# openfactor

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: README.md  __init__.py
data/providers/finnhub/: __init__.py  client.py  financials.py
data/providers/fmp/: __init__.py  client.py  estimates.py
data/providers/massive/: __init__.py  client.py  stocks.py
data/providers/sec_api/: __init__.py  client.py  fundamentals.py
data/providers/tipranks/: __init__.py  analysts.py  client.py
data/publish/: __init__.py  r2.py  us.py
data/sec/: __init__.py  history.py  schema.py  ttm.py
src/openfactor/: __init__.py  cli.py  console.py
src/openfactor/core/: __init__.py  checks.py  matrix.py  returns.py  sic.py
src/openfactor/factors/: __init__.py  defaults.py  factor.py  output.py  result.py
src/openfactor/factors/price/: beta.py  downside.py  liquidity.py  momentum.py  prospect.py  reversal.py  seasonality.py  short_reversal.py  volatility.py
src/openfactor/factors/reference/: dividend.py  earnings.py  earnings_yield.py  forward_earnings.py  (+16 more)
src/openfactor/io/: __init__.py  indexes.py  r2.py  snapshot.py
src/openfactor/llm/: __init__.py  cache.py  client.py  openai.py  report_bundle.py  report_chat.py  report_tool.py  semantic.py
src/openfactor/model/: __init__.py  exposures.py  factor_returns.py  idiosyncratic_risk.py  normalize.py  risk.py  specific_risk.py
src/openfactor/portfolio/: __init__.py  active_risk.py  attribution.py  model_data.py  report.py  summary.py
src/openfactor/tui/: __init__.py  __main__.py  app.py  report.py  track.py
(+3 files in other folders)
