[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfactor"
version = "0.1.0"
description = "Deterministic open-source factor risk engine."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24",
  "openai>=1.100",
  "openai-agents",
  "pandas>=2.0",
  "pydantic>=2.0",
  "rich>=13.0",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.optional-dependencies]
data = [
  "requests>=2.31",
  "tqdm>=4.66",
]
[project.scripts]
openfactor = "openfactor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openfactor.llm.prompts" = ["*.txt"]
